--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,12 @@
 .nav{
   grid-area: n;
   background-color:burlywood;
+  padding: 20px;
 }
-.item{
-  color:white
+.item a{
+  color:white;
+  text-decoration:none;
 }
-.active{
-  color: blue;
+.item a.activeLink{
+  color: gold;
 }
