--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -6,9 +6,10 @@
 
 .dialogsItems {
     padding: 10px;
+    color: white;
 }
 
-.activeDialog {
+.dialogsItems.activeDialog {
     color: gold;
 }
 
@@ -17,6 +18,7 @@
 
 }
 
-.message {
-
-}
+/*
+.messages. message {
+    color: white;
+}*/
